--- a/templates/index.html
+++ b/templates/index.html
@@ -22,19 +22,22 @@
 		<div class="devops-paths">
 			
 			<p class="keep-studying">Não fique parado, continue estudando sobre DevOps e Containers!</p>
-			
+            
 			<div class="devops-path path">
-				<h1>Trilha DevOps</h1>
+                <h1>Trilha DevOps</h1>
+                <a href="https://moodle-prod.4linux.com.br/course/view.php?id=64&section=1#tabs-tree-start" class="devops-course course">
+                    <h2>523 - DevOps Essentials</h2>
+                </a>
 				<a href="https://4linux.com.br/cursos/treinamento/ci-cd-integracao-e-entrega-continua-com-git-jenkins-nexus-e-sonar" class="devops-course course">
 					<h2>524 - CI/CD: INTEGRAÇÃO E ENTREGA CONTINUA COM GIT, JENKINS, NEXUS E SONAR</h2>
-				</a><!--
-				--><a href="https://4linux.com.br/cursos/treinamento/infraestrutura-agil-com-praticas-devops" class="devops-course course">
+				</a>
+				<a href="https://4linux.com.br/cursos/treinamento/infraestrutura-agil-com-praticas-devops" class="devops-course course">
 					<h2>525 - INFRAESTRUTURA ÁGIL COM PRÁTICAS DEVOPS</h2>
-				</a><!--
-				--><a href="https://www.4linux.com.br/curso/continuous-monitoring" class="ops-course course">
+                </a>
+                <a href="https://www.4linux.com.br/curso/continuous-monitoring" class="ops-course course">
 					<h2>527 - DEVSECOPS: SEGURANÇA EM INFRAESTRUTURA E DESENVOLVIMENTO ÁGIL</h2>
-				</a><!--
-				--><a href="https://4linux.com.br/cursos/treinamento/praticas-de-continuous-monitoring-para-uma-infraestrutura-agil/" class="ops-course course">
+                </a>
+                <a href="https://4linux.com.br/cursos/treinamento/praticas-de-continuous-monitoring-para-uma-infraestrutura-agil/" class="ops-course course">
 					<h2>528 - PRÁTICAS DE CONTINUOUS MONITORING PARA UMA INFRAESTRUTURA ÁGIL</h2>
 				</a>
 			</div>
