corrige o link para o curso DevOps Essentials

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
             
 			<div class="devops-path path">
                 <h1>Trilha DevOps</h1>
-                <a href="https://moodle-prod.4linux.com.br/course/view.php?id=64&section=1#tabs-tree-start" class="devops-course course">
-                    <h2>523 - DevOps Essentials</h2>
+                <a href="https://4linux.com.br/cursos/treinamento/devops-essentials/" class="devops-course course">
+                    <h2>523 - DevOps Essentials [Gratúito]</h2>
                 </a>
 				<a href="https://4linux.com.br/cursos/treinamento/ci-cd-integracao-e-entrega-continua-com-git-jenkins-nexus-e-sonar" class="devops-course course">
 					<h2>524 - CI/CD: INTEGRAÇÃO E ENTREGA CONTINUA COM GIT, JENKINS, NEXUS E SONAR</h2>
