cria trilha grátis

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,35 @@
 			
 			<p class="keep-studying">Não fique parado, continue estudando sobre DevOps e Containers!</p>
             
+            <div class="free-path path">
+                <h1>Trilha Grátis</h1>
+                <a href="https://4linux.com.br/cursos/treinamento/devops-essentials/" class="devops-course course">
+                    <h2>523 - DevOps Essentials</h2>
+                </a>
+				<a href="https://4linux.com.br/cursos/treinamento/containers-fundamentals/" class="devops-course course">
+                    <h2>538 - Containers Fundamentals</h2>
+                </a>
+                <a href="https://4linux.com.br/cursos/treinamento/big-data-essentials/" class="devops-course course">
+                    <h2>4790 - Big Data Essentials</h2>
+                </a>
+                <a href="https://4linux.com.br/cursos/treinamento/linux-fundamentals/" class="devops-course course">
+                    <h2>701 - Linux Fundamentals</h2>
+                </a>
+                <a href="https://4linux.com.br/cursos/treinamento/linux-essentials/" class="devops-course course">
+                    <h2>702 - Linux Essentials</h2>
+                </a>
+                <a href="https://4linux.com.br/cursos/treinamento/auditoria-logs/" class="devops-course course">
+                    <h2>516 - Auditoria de Logs</h2>
+                </a>
+                <a href="https://4linux.com.br/cursos/treinamento/beginners-developer/" class="devops-course course">
+                    <h2>4519 - Beginner Developer</h2>
+                </a>
+            </div>
+            
 			<div class="devops-path path">
                 <h1>Trilha DevOps</h1>
                 <a href="https://4linux.com.br/cursos/treinamento/devops-essentials/" class="devops-course course">
-                    <h2>523 - DevOps Essentials [Gratúito]</h2>
+                    <h2>523 - DevOps Essentials </h2>
                 </a>
 				<a href="https://4linux.com.br/cursos/treinamento/ci-cd-integracao-e-entrega-continua-com-git-jenkins-nexus-e-sonar" class="devops-course course">
 					<h2>524 - CI/CD: INTEGRAÇÃO E ENTREGA CONTINUA COM GIT, JENKINS, NEXUS E SONAR</h2>
