corrige a classe dos cursos gratuitos

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,16 +31,16 @@
 				<a href="https://4linux.com.br/cursos/treinamento/containers-fundamentals/" class="devops-course course">
                     <h2>538 - Containers Fundamentals</h2>
                 </a>
-                <a href="https://4linux.com.br/cursos/treinamento/big-data-essentials/" class="devops-course course">
+                <a href="https://4linux.com.br/cursos/treinamento/big-data-essentials/" class="ex-course course">
                     <h2>4790 - Big Data Essentials</h2>
                 </a>
-                <a href="https://4linux.com.br/cursos/treinamento/linux-fundamentals/" class="devops-course course">
+                <a href="https://4linux.com.br/cursos/treinamento/linux-fundamentals/" class="ops-course course">
                     <h2>701 - Linux Fundamentals</h2>
                 </a>
-                <a href="https://4linux.com.br/cursos/treinamento/linux-essentials/" class="devops-course course">
+                <a href="https://4linux.com.br/cursos/treinamento/linux-essentials/" class="ops-course course">
                     <h2>702 - Linux Essentials</h2>
                 </a>
-                <a href="https://4linux.com.br/cursos/treinamento/auditoria-logs/" class="devops-course course">
+                <a href="https://4linux.com.br/cursos/treinamento/auditoria-logs/" class="ops-course course">
                     <h2>516 - Auditoria de Logs</h2>
                 </a>
                 <a href="https://4linux.com.br/cursos/treinamento/beginners-developer/" class="devops-course course">
